--- a/src/Cassette.Nancy.Demo.TinyIoC/Web.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Web.config
@@ -2,7 +2,9 @@
 <configuration>
   <configSections>
     <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
-  </configSections>
+  <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    </sectionGroup></configSections>
   <razor disableAutoIncludeModelNamespace="true">
     <assemblies>
       <add assembly="Cassette" />
@@ -20,24 +22,30 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <appSettings>
-    <add key="webPages:Enabled" value="false" />
-  </appSettings>
+  
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <buildProviders>
-        <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-        <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders>
-    </compilation>
-    <httpHandlers>
+    
+    
+  <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers>
-  </system.web>
-  <system.webServer>
+    </httpHandlers><compilation>
+			<buildProviders>
+				<add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+				<add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+			</buildProviders>
+		</compilation></system.web>
+  
+<system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-  </system.webServer>
-</configuration>
+  </system.webServer><appSettings>
+		<add key="webPages:Enabled" value="false" />
+	</appSettings><system.web.webPages.razor>
+    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+      <namespaces>
+        <add namespace="Nancy.ViewEngines.Razor" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor></configuration>
