--- a/src/Cassette.Nancy.Demo.TinyIoC/packages.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/packages.config
@@ -8,10 +8,11 @@
   <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
   <package id="IronRuby" version="1.1.3" targetFramework="net40" />
   <package id="Jurassic" version="2.1.1" targetFramework="net40" />
-  <package id="Nancy" version="0.12.1" targetFramework="net40" />
-  <package id="Nancy.Hosting.Aspnet" version="0.12.1" targetFramework="net40" />
-  <package id="Nancy.Viewengines.Razor" version="0.12.1" targetFramework="net40" />
-  <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
+  <package id="Nancy" version="0.20.0" targetFramework="net40" />
+  <package id="Nancy.Hosting.Aspnet" version="0.20.0" targetFramework="net40" />
+  <package id="Nancy.Viewengines.Razor" version="0.20.0" targetFramework="net40" />
+  <package id="NLog" version="2.1.0" targetFramework="net40" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" targetFramework="net40" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" targetFramework="net40" />
+  <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net40" />
 </packages>
