Updated AjaxMin and xunit nugets. So far everything still works

--- a/src/Cassette.Nancy.Demo.Autofac/Web.config
+++ b/src/Cassette.Nancy.Demo.Autofac/Web.config
@@ -19,6 +19,10 @@
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.6.3.862" newVersion="2.6.3.862" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.5021.15808" newVersion="5.2.5021.15808" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   
