--- a/src/Cassette.Nancy.Demo.TinyIoC/Web.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Web.config
@@ -20,6 +20,10 @@
         <assemblyIdentity name="dotless.ClientOnly" publicKeyToken="96b446c9e63eae34" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.5021.15808" newVersion="5.2.5021.15808" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   
