--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\..\dependencies\cassette\src\Cassette.CoffeeScript\packages.config" />
   <repository path="..\..\dependencies\cassette\src\Cassette\packages.config" />
+  <repository path="..\..\dependencies\Nancy\src\Nancy.Testing\packages.config" />
   <repository path="..\..\dependencies\Nancy\src\Nancy.ViewEngines.Razor\packages.config" />
   <repository path="..\Cassette.Nancy.Demo.Autofac\packages.config" />
   <repository path="..\Cassette.Nancy.Demo.MVC3\packages.config" />
