--- a/src/Cassette.Nancy.Demo.TinyIoC/Cassette.Nancy.Demo.TinyIoC.csproj
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Cassette.Nancy.Demo.TinyIoC.csproj
@@ -43,20 +43,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cassette">
-      <HintPath>..\packages\Cassette.2.1.0\lib\net40-client\Cassette.dll</HintPath>
+    <Reference Include="AjaxMin">
+      <HintPath>..\packages\AjaxMin.4.84.4790.14417\lib\net40\AjaxMin.dll</HintPath>
     </Reference>
-    <Reference Include="Cassette.CoffeeScript, Version=2.0.0.17976, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Cassette, Version=2.2.0.13183, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Cassette.CoffeeScript.2.0.0\lib\net40-client\Cassette.CoffeeScript.dll</HintPath>
+      <HintPath>..\packages\Cassette.2.2.0\lib\net40-client\Cassette.dll</HintPath>
     </Reference>
-    <Reference Include="Cassette.Less, Version=2.0.0.17976, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Cassette.CoffeeScript, Version=2.2.0.13183, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Cassette.Less.2.0.0\lib\net40-client\Cassette.Less.dll</HintPath>
+      <HintPath>..\packages\Cassette.CoffeeScript.2.2.0\lib\net40-client\Cassette.CoffeeScript.dll</HintPath>
     </Reference>
-    <Reference Include="Cassette.Sass, Version=2.0.0.17977, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Cassette.Less, Version=2.2.0.13183, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Cassette.Sass.2.0.0\lib\net40-client\Cassette.Sass.dll</HintPath>
+      <HintPath>..\packages\Cassette.Less.2.2.0\lib\net40-client\Cassette.Less.dll</HintPath>
+    </Reference>
+    <Reference Include="Cassette.Sass, Version=2.2.0.13183, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Cassette.Sass.2.2.0\lib\net40-client\Cassette.Sass.dll</HintPath>
     </Reference>
     <Reference Include="dotless.ClientOnly, Version=1.3.1.0, Culture=neutral, PublicKeyToken=96b446c9e63eae34, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
