- Added IRootPathProvider implementation to Cassette.Nany.Test, to fix Exception in tests due to Nancy not being able to locate views (it was looking in Cassette.Nancy.Tests/bin/debug/ as appRoot). - Fixed some of the failing tests; bug where Cassette plugin assemblies weren't being loaded, which caused Exceptions in Bundle reference building for dirs where only files with file extensions handled by Cassette plugins exist. - Still some failing tests, but some progress!

--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -76,6 +76,7 @@
     <Compile Include="RazorViewTest.cs" />
     <Compile Include="NonOptimizingBootstrapper.cs" />
     <Compile Include="TestCassetteBundleConfiguration.cs" />
+    <Compile Include="TestCassetteRootPathProvider.cs" />
     <Compile Include="TestNancyModule.cs" />
     <Compile Include="TestRazorConfiguration.cs" />
   </ItemGroup>
