--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -31,8 +31,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cassette.Less">
+      <HintPath>..\..\dependencies\cassette\src\Cassette.Less\bin\Debug\NET40\Cassette.Less.dll</HintPath>
+    </Reference>
+    <Reference Include="Cassette.Sass">
+      <HintPath>..\..\dependencies\cassette\src\Cassette.Sass\bin\Debug\NET40\Cassette.Sass.dll</HintPath>
+    </Reference>
     <Reference Include="CsQuery">
       <HintPath>..\packages\CsQuery.1.2.1\lib\net40\CsQuery.dll</HintPath>
+    </Reference>
+    <Reference Include="IronRuby, Version=1.1.3.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\dependencies\cassette\src\Cassette.Sass\bin\Debug\NET40\IronRuby.dll</HintPath>
+    </Reference>
+    <Reference Include="IronRuby.Libraries">
+      <HintPath>..\..\dependencies\cassette\src\Cassette.Sass\bin\Debug\NET40\IronRuby.Libraries.dll</HintPath>
     </Reference>
     <Reference Include="Jurassic">
       <HintPath>..\packages\Jurassic.2.1.1\lib\Jurassic.dll</HintPath>
