--- a/src/Cassette.Nancy.Demo.MVC3/packages.config
+++ b/src/Cassette.Nancy.Demo.MVC3/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Cassette" version="2.3.0" targetFramework="net40" />
+  <package id="AjaxMin" version="4.84.4790.14417" targetFramework="net40" />
+  <package id="Cassette" version="2.2.0" targetFramework="net40" />
+  <package id="Cassette" version="2.2.2" targetFramework="net40" />
   <package id="Cassette.Nancy" version="2.0.0" targetFramework="net40" />
   <package id="Nancy" version="0.20.0" targetFramework="net40" />
   <package id="Nancy.Viewengines.Razor" version="0.20.0" targetFramework="net40" />
