--- a/src/packages/Cassette.2.3.0/Cassette.2.3.0.nuspec
+++ b/src/packages/Cassette.2.3.0/Cassette.2.3.0.nuspec
@@ -1,28 +1,25 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>Cassette.Less</id>
-    <version>2.2.2</version>
+    <id>Cassette</id>
+    <version>2.3.0</version>
     <authors>Andrew Davey</authors>
     <owners>Andrew Davey</owners>
     <licenseUrl>http://getcassette.net/licensing</licenseUrl>
     <projectUrl>http://getcassette.net/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Less CSS compiler support for Cassette.</description>
+    <description>Important: This is just the core library for Cassette. You probably want to install the Cassette.Aspnet package for ASP.NET support.</description>
     <copyright>© 2011 Andrew Davey</copyright>
     <tags>web javascript coffeescript css html templates asp.net</tags>
     <dependencies>
       <group targetFramework=".NETFramework4.5">
-        <dependency id="Cassette" version="2.2.2" />
-        <dependency id="DotlessClientOnly" version="1.3" />
+        <dependency id="AjaxMin" version="4.84" />
       </group>
       <group targetFramework=".NETFramework4.0">
-        <dependency id="Cassette" version="2.2.2" />
-        <dependency id="DotlessClientOnly" version="1.3" />
+        <dependency id="AjaxMin" version="4.84" />
       </group>
       <group targetFramework=".NETFramework3.5">
-        <dependency id="Cassette" version="2.2.2" />
-        <dependency id="DotlessClientOnly" version="1.3" />
+        <dependency id="AjaxMin" version="4.84" />
         <dependency id="Iesi.Collections" version="(, 4.0)" />
       </group>
     </dependencies>
