- Updated Nancy submodule to point back to the original NancyFX github repo instead of my fork. The issues I had that caused meto use the fork in the first place were resolved by enabling package restore for the Cassette.Nancy solution. - Enabled Nuget package restore for the Cassette.nancy solution - Updating revision for cassette submodule (cascading changes from enabling package restore) - Deleted unnecessary package folder: AjaxMin.5.2.xxx

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/GiscardBiamby/cassette
 [submodule "dependencies/Nancy"]
 	path = dependencies/Nancy
-	url = https://github.com/GiscardBiamby/Nancy
+	url = https://github.com/NancyFx/Nancy.git
