--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsQuery" version="1.2.1" targetFramework="net40" />
+  <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net40" />
   <package id="Jurassic" version="2.1.1" targetFramework="net40" />
   <package id="NLog" version="2.1.0" targetFramework="net40" />
   <package id="Utility" version="0.7.1.0" targetFramework="net40" />
