--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -4,7 +4,6 @@
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net40" />
   <package id="Jurassic" version="2.1.1" targetFramework="net40" />
   <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="Utility" version="0.7.1.0" targetFramework="net40" />
-  <package id="xunit" version="1.9.2" targetFramework="net40" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
 </packages>
